force-app/main/default/objects/Quote_Line_Schedule__c/Quote_Line_Schedule__c.object-meta.xml
<CustomObject>
    <label>Quote Line Schedule</label>
    <nameField>
        <displayFormat>QLS-{00000000}</displayFormat>
        <label>Quote Line Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>