force-app/main/default/objects/Quote_Line_Schedule__c/fields/Date_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Date_Fulfilled__c</fullName>
    <label>Date Fulfilled</label>
    <type>Date</type>
</CustomField>