force-app/main/default/objects/Quote_Line_Schedule__c/fields/Quantity_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Fulfilled__c</fullName>
    <label>Quantity Fulfilled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>