force-app/main/default/objects/Quote_Line_Schedule__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Line Schedules</relationshipLabel>
    <relationshipName>Quote_Line_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>