force-app/main/default/objects/Quote_Line_Schedule__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Line Schedules</relationshipLabel>
    <relationshipName>Quote_Line_Schedules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>