force-app/main/default/objects/Quote_Line_Schedule__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <formula>Revision_Schedule__r.Revision__c</formula>
    <label>Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>