force-app/main/default/objects/Quote_Line_Schedule__c/fields/Revision_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Revision_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revision Schedule</label>
    <referenceTo>Revision_Schedule__c</referenceTo>
    <relationshipLabel>Quote Line Schedules</relationshipLabel>
    <relationshipName>Quote_Line_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>