force-app/main/default/objects/Quote_Line_Schedule__c/fields/Schedule_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Quantity__c</fullName>
    <label>Schedule Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>