force-app/main/default/objects/Quote_Line_Schedule__c/fields/Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Status__c</fullName>
    <defaultValue>&quot;Pipeline&quot;</defaultValue>
    <label>Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>