force-app/main/default/objects/Quote_Line_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Revision_Schedule__r.Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>